Refatorando manipulacao de produtos do pedido